# ball_and_socket_estimator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ball_in_socket_estimator.xml  package.xml
MagneticForces/: InfiniteBox.geo  magnets.db  magnets.geo  magnets.geo.opt  magnets.msh  magnets.pre  magnets.pro  magnets.res  magnets_common.pro  tmp.geo
arduino/msj_magnetic_field/: motor_test.py  platformio.ini
cmake/: FindCNPY.cmake
include/ball_in_socket_estimator/: ball_in_socket_estimator.hpp  grid3d.hpp  pose_estimator.hpp
magjointlib/: 20200602-113856_particle_swarm_winner.yaml  20200602-142616_particle_swarm_winner.yaml  20200603-152134_particle_swarm_winner.yaml  magjoint.py  magjoint_field_calibration.py  magjoint_optimizer.py  magjoint_particle_swarm.py  magjoint_particle_swarm2.py  magjoint_poseestimator.py  magnet_arragement_optimizer.py  magnetic_collision.py  magnetic_collision_cuda.py  magnetic_field_calibration.py  magnetic_field_poseestimator.py  magnetic_field_poseestimator2.py  magnetic_field_poseestimator3.py  magnetic_field_similarity.py  magnetic_field_simulation_pose_estimation.py  magnetic_field_visualization.py  magnetic_orientation_optimizer.py  magnetic_orientation_optimizer2.py  magnetic_sensor_calibration.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
magjointlib/configs/: eight_magnets.yaml  five_magnets.yaml  five_magnets2.yaml  five_magnets3.yaml  four_different_magnets.yaml  four_magnets.yaml  four_magnets2.yaml  four_magnets3.yaml  four_magnets_offaxis.yaml  hallbach_9.yaml  magnet_A.yaml  magnetic_field_calibration.yaml  quadro_pole.yaml  quadro_pole2.yaml  sensor_calibration.yaml  sensor_calibration_7mm.yaml  single_magnet.yaml  single_magnet2.yaml  single_magnet3.yaml  single_magnet_offaxis.yaml  six_magnets.yaml  ten_magnets.yaml  ten_magnets2.yaml  three_magnets.yaml  three_magnets4.yaml  three_magnets_offaxis.yaml  three_magnets_solar.yaml  three_magnets_v0.2.yaml  twenty_magnets.yaml  twenty_two_magnets.yaml  two_magnets.yaml  two_magnets2.yaml  two_magnets3.yaml  two_magnets4.yaml  two_magnets5.yaml  two_magnets6.yaml  two_magnets_offaxis.yaml
magjointlib/data/: three_magnets.npz
magjointlib/models/: sensor_position.npz  sensor_values.npz  three_magnets.npz  three_magnets_v0.2.npz  two_magnets.npz
models/: markermodel.STL  markermodel.dae  markermodel.mtl
pcbs/roboy_3.0_40mm_ball_sensor/: fp-info-cache  fp-lib-table  kicad-StepUp-tools.FCMacro  roboy_3.0_40mm_ball_sensor-cache.lib  roboy_3.0_40mm_ball_sensor.bak  roboy_3.0_40mm_ball_sensor.cfg  roboy_3.0_40mm_ball_sensor.emn  roboy_3.0_40mm_ball_sensor.emp  roboy_3.0_40mm_ball_sensor.kicad_pcb  roboy_3.0_40mm_ball_sensor.kicad_pcb-bak  roboy_3.0_40mm_ball_sensor.net  roboy_3.0_40mm_ball_sensor.pro  roboy_3.0_40mm_ball_sensor.sch  roboy_3.0_40mm_ball_sensor.sch-bak  roboy_3.0_40mm_ball_sensor.step  roboy_3.0_40mm_ball_sensor1.step  roboy_3_0_40mm_ball_sensor1.FCStd  sym-lib-table
pcbs/roboy_3.0_40mm_magnetic_field_calibration/: fp-info-cache  fp-lib-table  roboy_3.0_40mm_magnetic_field_calibration-cache.lib  roboy_3.0_40mm_magnetic_field_calibration.kicad_pcb  roboy_3.0_40mm_magnetic_field_calibration.kicad_pcb-bak  roboy_3.0_40mm_magnetic_field_calibration.net  (+6 more)
python/: 5mm_cubes2.yaml  60x60_elu_checkpoint.h5  README.md  balljoint_config.yaml  balljoint_config_test.yaml  beschde.h5  beschde.json  beschdemodel.h5  data_analysis.ipynb  evaluation.ipynb  evaluation_dvbf.ipynb  evaluation_dvbf_with_action.ipynb  first_test.ipynb  grid_map.py  head.json  headmodel.h5  headmodel.json  hyper_parameter.py  magnet_A.yaml  magnet_A_45deg.yaml  magnet_B.yaml  magnet_C.yaml  magnetic_field_calibration.py  magnetic_field_calibration_reduced.py  magnetic_field_collision.py  magnetic_field_simulation.py  magnetic_field_simulation3d.py  magnetic_field_simulation3d_multiprocessing.py  magnetic_field_simulation_pose_estimation.py  magnetic_field_simulation_publisher.py  magnetic_field_visualization.py  magnetic_sensor_logger.py  model.h5  model.json  nn_model.py  particle_swarm.py  particle_swarm_generate.py  predict.py  predict_comparison.py  predict_lstm.py  (+29 more)
python_nn_old/: README.md  data_analysis.ipynb  moving_average.ipynb  nn_model.py  particle_swarm.py  pl_training.ipynb  pl_training_normal.ipynb  predict.py  remap.py  replicate_data.py  requirements.txt  stop_control.py  tools.py  torch_nn.py  torch_nn_model.py  torch_predict.ipynb  torch_training.ipynb  torch_training_normal.ipynb  training-head.ipynb  training-shoulder-left.ipynb  training.ipynb  visualize_data.py  write_data_from_rosbag_old.py
python_old/: 5mm_cubes.yaml  60x60_elu.json  60x60_elu_checkpoint.h5  balljoint_config.yaml  balljoint_config_calibrated.yaml  balljoint_config_test_log.yaml  beschdemodel.json  five_magnets.yaml  grid_map.py  head.h5  helix_positions.py  hyper_parameter.py  hyper_parameter_lstm.py  joint_targets.py  magnet_A.yaml  magnet_A_45deg_calibrated.yaml  magnet_B.yaml  magnet_C.yaml  magnetic_config_merge.py  magnetic_config_printout.py  magnetic_field_collision.py  magnetic_field_simulation.py  magnetic_field_simulation3d.py  magnetic_field_simulation3d_multiprocessing.py  magnetic_field_simulation_brute_force.py  magnetic_field_simulation_pose_estimation.py  magnetic_field_simulation_publisher.py  magnetic_sensor_logger.py  magnetic_sensor_selector.py  neckmodel.h5  particle_swarm.py  predict.py  replay_lstm.py  sensor_A_log.yaml  sensor_B_log.yaml  shoulder_left.h5  shoulder_left.json  shoulder_leftmodel.h5  shoulder_leftmodel.json  shoulder_right.h5  (+9 more)
src/: ball_in_socket_estimator.cpp  magnetic_field_visualization.cpp  pose_estimator.cpp
src/ball_in_socket_estimator/: CMakeLists.txt  package.xml
src/ball_in_socket_estimator/include/ball_in_socket_estimator/: ball_in_socket_estimator.hpp
src/ball_in_socket_estimator/msgs/: MarkerPosition.msg
src/ball_in_socket_estimator/python/: shoulder_angle_test.ipynb  shoulder_tracking.ipynb  shoulder_tracking.py  shoulder_training.py
src/ball_in_socket_estimator/src/: ball_in_socket_estimator.cpp
(+181 files in other folders)
